# kafka-train

./: .gitignore  Dockerfile.keytool  Gemfile  application.yml  cache.sh  clearvolume.sh  consumer.properties  createcert.sh  docker-compose.keytool.yml  docker-compose.single.yml  docker-compose.yml  kafka.env  kafka.properties  kafkarest.env  main.py  main.rb  memo.txt  pyproject.toml  set_env_for_kafdrop.sh  zookeeper.env
config/: group1.yml
script/: createcert.py
secrets/: ca-cert.srl  create-certs.sh  createcert.py  group1.yml  kafka-ca1-signed.crt  kafka.crt  kafka.csr  kafka.keystore.jks  kafka.truststore.jks  kafka_jaas.conf  kafka_server_jaas.conf  kafkacat-ca1-signed.pem  kafkacat.client.key  kafkacat.client.req  kafkarest_jaas.conf  myca.key  myca.srl  myca.yml  server_jaas.conf  snakeoil-ca-1.crt  snakeoil-ca-1.key  snakeoil-ca-1.srl  zookeeper_jaas.conf
secrets/ssl/: kafka.client.truststore.jks  kafka.server.keystore.jks  kafka.server.truststore.jks
secrets/ssl.old/: ca-cert  ca-key  create-certs.sh  kafka.client.keystore.jks  kafka.keystore.jks  kafkacat-ca1-signed.pem  kafkacat.client.key  kafkarest_jaas.conf  snakeoil-ca-1.key
